--- a/assets/disc.css
+++ b/assets/disc.css
@@ -409,12 +409,25 @@ border-radius: 0;
 color: var(--black);
 font-size: 16px;
 }
-    @supports (-webkit-touch-callout: none) {
-    input[type="date"]:not(:focus):invalid:before {
-        content: attr(data-placeholder);
-        opacity: 0.5;
+
+input[type="date"]:not(:focus):invalid:before {
+    content: attr(data-placeholder);
+    opacity: 0.5;
+}
+
+/*@supports (-webkit-touch-callout: none) {
+input[type="date"]:not(:focus):invalid:before {
+    content: attr(data-placeholder);
+    opacity: 0.5;
+}
+}*/
+
+@media (hover: hover) and (pointer: fine) {
+    input[type="date"]:before {
+        display: none !important;
     }
 }
+
 .top_header fieldset .btn2 {
     background-color: var(--pink);
     color: var(--lite);
